# evolution

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE
cicd/: clang-19.Dockerfile  clang-20.Dockerfile  gcc-14.Dockerfile
cmake/: cpm-dependencies.cmake
src/: CMakeLists.txt  init_world.cpp  main.cpp  main.cppm
src/ai/: CMakeLists.txt  brainfuck.cpp  brainfuck.hpp
src/ai/brainfuck/: opcode_executors.hpp  types.hpp
src/core/: CMakeLists.txt  Core.cpp  Core.hpp  core.helpers.field.cppm  core.helpers.xy_iterator.cppm  core.map.cppm  core.module.map.cppm  core.modules.map.cppm
src/core/helpers/: field.hpp  init.cpp  init.hpp  time_measuring.hpp  xy_iterator.hpp
src/core/modules/: io.cpp  io.hpp  map.cpp  map.hpp  visualization.cpp  visualization.hpp
src/core/modules/visualization/impl/: components.hpp
src/main_brainfuck_world/: Agent.cpp  Agent.hpp  CMakeLists.txt  GeneManager.cpp  GeneManager.hpp  ITester.hpp  main.cpp
src/main_brainfuck_world/testers/: HelloWorld.cpp  HelloWorld.hpp
src/main_default_world/: CMakeLists.txt  icon.rc  init_world.cpp  main.cpp
test/: CMakeLists.txt
test/ai/brainfuck/: CMakeLists.txt  opcode_executors.cpp  vm.cpp
test/core/: CMakeLists.txt  core.helpers.field.cpp  core.helpers.xy_iterator.cpp
